attempts to correct mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,7 @@ h3 {
 }
 
 h1, h2 {
-  font-size: 48pt;
-  margin: 0 auto;
+  font-size: 4.5rem;
   text-align: center;
   letter-spacing: .1em;
 }
@@ -96,7 +95,7 @@ span.bottom-space {
 } */
 
 #footer {
-  background: hsla(0, 0%, 100%, .8);
+  background-color: hsla(0, 0%, 100%, .8);
   height: fit-content;
   padding: 10px;
   text-align: end;
@@ -106,7 +105,7 @@ span.bottom-space {
   bottom: 0px; */
 }
 #footer-abs {
-  background: hsla(0, 0%, 100%, .8);
+  background-color: hsla(0, 0%, 100%, .8);
   height: fit-content;
   width: 100%;
   padding: 10px;
@@ -269,7 +268,7 @@ margin: 2rem 0;
 }
 #skip-link {
   position: absolute;
-  transform: translateX(-100%);
+  transform: translateX(-200%);
   background: #FFFFFF;
   color: #000000;
   padding: 5px 10px;
@@ -279,7 +278,7 @@ margin: 2rem 0;
 }
 
 #skip-link:focus {
-  transform: translateY(0);
+  transform: translateX(0);
 }
 
 .carousel-container{
@@ -553,9 +552,13 @@ margin: 2rem 0;
   h1 {
       font-size: 3.2rem;
       line-height: 4rem;
+      text-align: center;
       padding: 1rem 0;
   }
-
+  #heading{
+    width: 100px;
+    margin: 0 auto;
+  }
   h3 {
       text-align: center;
   }
@@ -568,19 +571,17 @@ margin: 2rem 0;
 }
 
   #home-container {
-      clear: right;
       height: max-content;
       display: flex;
-      align-items: center;
       justify-content: center;
       width: 100%;
       /* margin-left: -1rem; */
   }
 
-
   #profile-img img {
       width: 100%;
       height: 100%;
+      margin-left: 50px;
   }
 
   #about {
@@ -597,6 +598,7 @@ margin: 2rem 0;
   }
 
   #project-categories {
+    margin-left: 30px;
       display: flex;
       flex-direction: column;
       width: 200px;
@@ -609,6 +611,9 @@ margin: 2rem 0;
   .portfolios span {
       font-size: 2rem;
   }
+  .portfolio-container{
+    margin-left: 50px;
+  }
   .carousel-container{
     width: 90%;
     padding: 3rem;
@@ -620,6 +625,7 @@ margin: 2rem 0;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+
   }
     
   
@@ -628,9 +634,18 @@ margin: 2rem 0;
         height: 125px;
         border-radius: 10px;
     }
+    .lang-icon:not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+    .carousel-handler{
+      width: fit-content;
+      margin: 2.5rem auto 0 auto;
+    }
     .portfolio-projects{
       display: flex;
+      width: 300px;
       flex-direction: column;
+      margin: 0 auto;
     }
     .portfolio-project,.portfolio-project-active{
       flex: 0 1 auto;
@@ -643,12 +658,13 @@ margin: 2rem 0;
         margin-left: -1rem
     }
     #footer {
+        background-color: transparent;
         width: 100%;
         padding: 5px 0;
         margin-top: 100px;
     }
   
     #footer p {
-        text-align: center;
+        text-align: left;
     }
 }
