--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body{
   flex-direction: column;
   min-height: 100vh;
   min-width: 100vw;
+  margin: 0 auto;
 }
 
 #root{
